added code for storing user input in the iOS keychain

--- a/Auth-Firebase/Podfile
+++ b/Auth-Firebase/Podfile
@@ -7,6 +7,7 @@ target 'Auth-Firebase' do
 
 pod 'Firebase/Core'
 pod 'Firebase/Auth'
-pod 'GoogleSignIn' 
+pod 'GoogleSignIn'
+pod 'CryptoSwift'
 
 end
